# jangine

./: .gitignore  CMakeLists.txt  GTest_CMakeLists.txt.in  LICENSE  README.md
.github/workflows/: build.yml  codeql-analysis.yml
src/engine/: CMakeLists.txt  jangine.h  jtypes.h
src/engine/director/: jdirector.cpp  jdirector.h
src/engine/math/: jmath.h  jmath_consts.h  jmatrix.h  jvec.h  jvec2.h
src/math/: jvec2.h
src/test/: CMakeLists.txt  director_test.cpp  gen-compile-cmd.sh  math_test.cpp  matrix_test.cpp  test.cpp  test_math.cpp  vector_test.cpp
